--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -10,6 +10,10 @@
   border-radius: 3px;
 }
 
+.subtotal__price {
+  color: green;
+}
+
 .subtotal__gift {
   display: flex;
   align-items: center;
