--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -15,6 +15,7 @@
   border-color: #a77734 #9c7e31 #846a29;
   color: #111;
   background-color: none;
+  cursor: pointer;
 }
 
 .checkoutProduct__image {
