--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.footer {
+  margin-top: 1rem;
+  padding: 1rem;
+  position: flex;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  cursor: pointer;
+}
+
+.footer:hover {
+  text-decoration: underline;
+}
